tests/ui/generic-associated-types/gat-in-trait-path-undeclared-lifetime.stderr
error[E0261]: use of undeclared lifetime name `'x`
  --> $DIR/gat-in-trait-path-undeclared-lifetime.rs:6:35
   |
LL |   fn _f(arg : Box<dyn for<'a> X<Y<'x> = &'a [u32]>>) {}
   |                                   ^^ undeclared lifetime
   |
   = note: for more information on higher-ranked polymorphism, visit https://doc.rust-lang.org/nomicon/hrtb.html
help: consider making the bound lifetime-generic with a new `'x` lifetime
   |
LL |   fn _f(arg : Box<dyn for<'x, 'a> X<Y<'x> = &'a [u32]>>) {}
   |                           +++
help: consider introducing lifetime `'x` here
   |
LL |   fn _f<'x>(arg : Box<dyn for<'a> X<Y<'x> = &'a [u32]>>) {}
   |        ++++

error[E0582]: binding for associated type `Y` references lifetime `'a`, which does not appear in the trait input types
  --> $DIR/gat-in-trait-path-undeclared-lifetime.rs:6:33
   |
LL |   fn _f(arg : Box<dyn for<'a> X<Y<'x> = &'a [u32]>>) {}
   |                                 ^^^^^^^^^^^^^^^^^

error[E0582]: binding for associated type `Y` references lifetime `'a`, which does not appear in the trait input types
  --> $DIR/gat-in-trait-path-undeclared-lifetime.rs:6:33
   |
LL |   fn _f(arg : Box<dyn for<'a> X<Y<'x> = &'a [u32]>>) {}
   |                                 ^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0582]: binding for associated type `Y` references lifetime `'a`, which does not appear in the trait input types
  --> $DIR/gat-in-trait-path-undeclared-lifetime.rs:6:33
   |
LL |   fn _f(arg : Box<dyn for<'a> X<Y<'x> = &'a [u32]>>) {}
   |                                 ^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0038]: the trait `X` is not dyn compatible
  --> $DIR/gat-in-trait-path-undeclared-lifetime.rs:6:19
   |
LL |   fn _f(arg : Box<dyn for<'a> X<Y<'x> = &'a [u32]>>) {}
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `X` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/gat-in-trait-path-undeclared-lifetime.rs:2:8
   |
LL | trait X {
   |       - this trait is not dyn compatible...
LL |   type Y<'x>;
   |        ^ ...because it contains the generic associated type `Y`
   = help: consider moving `Y` to another trait

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0038, E0261, E0582.
For more information about an error, try `rustc --explain E0038`.
